// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Button Large 1`] = `
<button
  className="storybook-button storybook-button--large storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--primary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  className="storybook-button storybook-button--small storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Header Logged In 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Log out
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Header Logged Out 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Log in
      </button>
      <button
        className="storybook-button storybook-button--small storybook-button--primary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Sign up
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Page Logged In 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="storybook-button storybook-button--small storybook-button--secondary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Log out
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the args of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots Example/Page Logged Out 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="storybook-button storybook-button--small storybook-button--secondary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Log in
        </button>
        <button
          className="storybook-button storybook-button--small storybook-button--primary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Sign up
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the args of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots TMS/Buttons Default Bookmark Button 1`] = `
<button
  className="sc-bdfBQB jwyqxD"
  type="button"
/>
`;

exports[`Storyshots TMS/Buttons Marked Bookmark Button 1`] = `
<button
  className="sc-bdfBQB hoVnRM"
  type="button"
/>
`;

exports[`Storyshots TMS/Buttons Search Button 1`] = `
<button
  className="sc-gsTEea cOhArm"
  onClick={[Function]}
  type="button"
>
  Искать
</button>
`;

exports[`Storyshots TMS/Buttons Test Button 1`] = `
<button
  className="sc-gsTEea hancQJ"
  onClick={[Function]}
  type="button"
>
  Test Button
</button>
`;

exports[`Storyshots TMS/Filters Closed Filter 1`] = `
<div
  className="sc-gKseQn"
>
  <div
    className="sc-fubCzh iArkPT"
  >
    Курс разработки
  </div>
  <div
    className="sc-iBPTik gGeCJW"
  >
    <div
      className="sc-pGacB conDUi"
    >
      Все курсы
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Filters Closed Selected Filter 1`] = `
<div
  className="sc-gKseQn"
>
  <div
    className="sc-fubCzh iArkPT"
  >
    Возраст
  </div>
  <div
    className="sc-iBPTik gGeCJW"
  >
    <div
      className="sc-pGacB conDUi"
    >
      Любой
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Filters Opened Filter 1`] = `
<div
  className="sc-gKseQn"
>
  <div
    className="sc-fubCzh iArkPT"
  >
    Курс разработки
  </div>
  <div
    className="sc-iBPTik jwKZwl"
  >
    <div
      className="sc-pGacB duudnD"
    >
      Все курсы
    </div>
    <div
      className="sc-jrAFXE isOAqQ"
    >
      <button
        className="sc-kEjbQP hYrcps"
      >
        Отменить все
      </button>
      <label
        className="sc-iqHYmW hHzAsn"
        htmlFor="Front end"
      >
        <input
          checked={true}
          className="sc-crrszt kRwLVa"
          id="Front end"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq jowVRj"
        />
        Front end
      </label>
      <label
        className="sc-iqHYmW hHzAsn"
        htmlFor="Java"
      >
        <input
          checked={true}
          className="sc-crrszt kRwLVa"
          id="Java"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq jowVRj"
        />
        Java
      </label>
      <label
        className="sc-iqHYmW hHzAsn"
        htmlFor="Python"
      >
        <input
          checked={true}
          className="sc-crrszt kRwLVa"
          id="Python"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq jowVRj"
        />
        Python
      </label>
      <label
        className="sc-iqHYmW hHzAsn"
        htmlFor="iOS"
      >
        <input
          checked={true}
          className="sc-crrszt kRwLVa"
          id="iOS"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq jowVRj"
        />
        iOS
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Filters Opened Selected Filter 1`] = `
<div
  className="sc-gKseQn"
>
  <div
    className="sc-fubCzh iArkPT"
  >
    Возраст
  </div>
  <div
    className="sc-iBPTik jwKZwl"
  >
    <div
      className="sc-pGacB duudnD"
    >
      Любой
    </div>
    <div
      className="sc-jrAFXE isOAqQ"
    >
      <button
        className="sc-kEjbQP hYrcps"
      >
        Отменить все
      </button>
      <label
        className="sc-iqHYmW hHzAsn"
        htmlFor="меньше 18"
      >
        <input
          checked={true}
          className="sc-crrszt kRwLVa"
          id="меньше 18"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq jowVRj"
        />
        меньше 18
      </label>
      <label
        className="sc-iqHYmW hHzAsn"
        htmlFor="18-30"
      >
        <input
          checked={true}
          className="sc-crrszt kRwLVa"
          id="18-30"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq jowVRj"
        />
        18-30
      </label>
      <label
        className="sc-iqHYmW hHzAsn"
        htmlFor="30-45"
      >
        <input
          checked={true}
          className="sc-crrszt kRwLVa"
          id="30-45"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq jowVRj"
        />
        30-45
      </label>
      <label
        className="sc-iqHYmW hHzAsn"
        htmlFor="больше 45"
      >
        <input
          checked={true}
          className="sc-crrszt kRwLVa"
          id="больше 45"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq jowVRj"
        />
        больше 45
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Inputs Default Input 1`] = `
<label
  className="sc-bqyKOL aQNKK"
>
  <span
    className="sc-kstqJO drmHYF"
  >
    E-mail
  </span>
  <input
    className="sc-dQoVA htaQIR"
    placeholder="Введите e-mail"
    type="email"
  />
</label>
`;

exports[`Storyshots TMS/Inputs Invalid Input 1`] = `
<label
  className="sc-bqyKOL aQNKK"
>
  <span
    className="sc-kstqJO jmvTTC"
  >
    Некорректный e-mail
  </span>
  <input
    className="sc-dQoVA ieVVZs"
    placeholder="Введите e-mail"
    type="email"
    value="ivan@teachmeskills.com"
  />
</label>
`;

exports[`Storyshots TMS/NavbarMenu Navbar 1`] = `
<nav
  className="sc-jcVcSv jJBsUL"
>
  <div
    className="sc-bZSRNg dkKkTq"
  />
  <ul
    className="sc-iUuxjF eIWqlC"
  >
    <li
      className="sc-iBaQBe cFbwJT"
    >
      <a
        className="sc-eggMyH ja-dwSx"
        href="/resumes"
      >
        Резюме
      </a>
    </li>
    <li
      className="sc-iBaQBe cFbwJT"
    >
      <a
        className="sc-eggMyH ja-dwSx"
        href="/responses"
      >
        Отклики
      </a>
    </li>
    <li
      className="sc-iBaQBe cFbwJT"
    >
      <a
        className="sc-eggMyH ja-dwSx"
        href="/bookmarks"
      >
        Избранное
      </a>
    </li>
  </ul>
  <div
    className="sc-cTkxnA hTRAGu"
  >
    <div
      className="sc-hiSbEG ABRKR sc-jNMcJZ gKZGSQ"
    >
      <div
        className="sc-hBEYId lMpJz"
        onClick={[Function]}
      />
    </div>
    <div
      className="sc-jJEKmz kfFjCj"
    >
      <div
        className="sc-idOiZg kzLKMn sc-hHfuMS sc-iktFfs egjNXE gOnyxR"
        onClick={[Function]}
      >
        <p
          className="sc-dIUeWJ iwCEKU"
        >
          ИИ
        </p>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots TMS/NotificationCounters Notification Counter Empty 1`] = `
<div
  className="sc-hBEYId MLaa-d"
/>
`;

exports[`Storyshots TMS/NotificationCounters Notification Counter One 1`] = `
<div
  className="sc-hBEYId lMpJz"
/>
`;

exports[`Storyshots TMS/NotificationCounters Notification Counter Two 1`] = `
<div
  className="sc-hBEYId eiboMC"
/>
`;

exports[`Storyshots TMS/Notifications Notifications Empty 1`] = `
<div
  className="sc-hiSbEG ABRKR"
>
  <div
    className="sc-hBEYId MLaa-d"
  />
  <div
    className="sc-lmoMya ekuvtZ sc-gWHigU dQcApY"
  >
    <ul
      className="sc-cBNeex gzDbTL"
    >
      <li
        className="sc-citxvW jCKQff"
      >
        "У вас нет новых уведомлений"
      </li>
    </ul>
    <div
      className="sc-iJuVqt sjgnd"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/Notifications Notifications One 1`] = `
<div
  className="sc-hiSbEG ABRKR"
>
  <div
    className="sc-hBEYId lMpJz"
  />
  <div
    className="sc-lmoMya ekuvtZ sc-gWHigU dQcApY"
  >
    <ul
      className="sc-cBNeex gzDbTL"
    >
      <li
        className="sc-citxvW jCKQff"
      >
        "У вас 5 новых приглашений"
      </li>
    </ul>
    <div
      className="sc-iJuVqt sjgnd"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/Notifications Notifications Two 1`] = `
<div
  className="sc-hiSbEG ABRKR"
>
  <div
    className="sc-hBEYId eiboMC"
  />
  <div
    className="sc-lmoMya ekuvtZ sc-gWHigU dQcApY"
  >
    <ul
      className="sc-cBNeex gzDbTL"
    >
      <li
        className="sc-citxvW jCKQff"
      >
        "У вас 59 новых приглашений"
      </li>
      <li
        className="sc-citxvW jCKQff"
      >
        "У вас 63 новых ответов"
      </li>
      <li
        className="sc-citxvW jCKQff"
      >
        "У вас 27 новых отказов"
      </li>
    </ul>
    <div
      className="sc-iJuVqt sjgnd"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/Search Input Search 1`] = `
<div
  className="sc-fodVek emSqjn"
>
  <input
    className="sc-fFucqa bmTKjo"
    placeholder="search"
    type="search"
  />
  <div
    className="sc-bkzYnD gUwXTM"
  />
</div>
`;

exports[`Storyshots TMS/Search Search Closed 1`] = `
<div
  className="sc-dOSRxR jqzLMz"
>
  <div
    className="sc-bBrNTY bogXyk"
  >
    <div
      className="sc-fodVek emSqjn"
    >
      <input
        className="sc-fFucqa bmTKjo"
        placeholder="Поиск"
        type="search"
      />
      <div
        className="sc-bkzYnD gUwXTM"
      />
    </div>
    <button
      className="sc-gsTEea cOhArm sc-hTZgZg kMYeqo"
      type="button"
    >
      ФИЛЬТРЫ
    </button>
    <button
      className="sc-gsTEea cOhArm"
      type="button"
    >
      Искать
    </button>
  </div>
</div>
`;

exports[`Storyshots TMS/Search Search Opened 1`] = `
<div
  className="sc-dOSRxR jqzLMz"
>
  <div
    className="sc-bBrNTY kmNjXG"
  >
    <div
      className="sc-fodVek emSqjn"
    >
      <input
        className="sc-fFucqa bmTKjo"
        placeholder="Поиск"
        type="search"
      />
      <div
        className="sc-bkzYnD gUwXTM"
      />
    </div>
    <button
      className="sc-gsTEea cOhArm sc-hTZgZg ihHJQn"
      type="button"
    >
      ФИЛЬТРЫ
    </button>
    <button
      className="sc-gsTEea cOhArm"
      type="button"
    >
      Искать
    </button>
  </div>
  <div
    className="sc-cOajNj hsrrki"
  >
    <ul
      className="sc-Azgjq bYTRfm"
    >
      <li
        className="sc-khAkCZ"
      >
        <div
          className="sc-gKseQn"
        >
          <div
            className="sc-fubCzh iArkPT"
          >
            Курс разработки
          </div>
          <div
            className="sc-iBPTik gGeCJW"
          >
            <div
              className="sc-pGacB conDUi"
              onClick={[Function]}
            >
              Все курсы
            </div>
          </div>
        </div>
      </li>
      <li
        className="sc-khAkCZ"
      >
        <div
          className="sc-gKseQn"
        >
          <div
            className="sc-fubCzh iArkPT"
          >
            Оценка диплома
          </div>
          <div
            className="sc-iBPTik gGeCJW"
          >
            <div
              className="sc-pGacB conDUi"
              onClick={[Function]}
            >
              Все оценки
            </div>
          </div>
        </div>
      </li>
      <li
        className="sc-khAkCZ"
      >
        <div
          className="sc-gKseQn"
        >
          <div
            className="sc-fubCzh iArkPT"
          >
            Возраст
          </div>
          <div
            className="sc-iBPTik gGeCJW"
          >
            <div
              className="sc-pGacB conDUi"
              onClick={[Function]}
            >
              Любой
            </div>
          </div>
        </div>
      </li>
      <li
        className="sc-khAkCZ"
      >
        <div
          className="sc-gKseQn"
        >
          <div
            className="sc-fubCzh iArkPT"
          >
            Английский язык
          </div>
          <div
            className="sc-iBPTik gGeCJW"
          >
            <div
              className="sc-pGacB conDUi"
              onClick={[Function]}
            >
              Любой уровень
            </div>
          </div>
        </div>
      </li>
    </ul>
    <button
      className="sc-gsTEea cOhArm sc-hTZgZg sc-jgHCSr ihHJQn enULks"
      type="button"
    >
      СКРЫТЬ ФИЛЬТРЫ
    </button>
  </div>
</div>
`;

exports[`Storyshots TMS/StudentCV Student CV Marked 1`] = `
<div
  className="sc-gTgzoy csHUE"
>
  <div
    className="sc-laRQdt iMZtCc"
  >
    <div
      className="sc-jeGTLq hHWhMN"
    />
    <div
      className="sc-iNqMzA bAxBvE"
    >
      <div
        className="sc-eJMPIT gNNHj"
      >
        <h2
          className="sc-nFqVA tFExb"
        >
          Роман
           
          Шашков
        </h2>
        <p
          className="sc-higWrZ ePyTma"
        >
          Python Developer
          , 25 лет
        </p>
      </div>
      <div
        className="sc-ehSDrC ffDiTh"
      >
        <button
          className="sc-gsTEea cOhArm sc-lcuiOb kNxNDL"
          type="button"
        >
          Пригласить
        </button>
        <button
          className="sc-bdfBQB hoVnRM"
          type="button"
        />
      </div>
    </div>
  </div>
  <div
    className="sc-gGmKaI fYeUkj"
  >
    <ul
      className="sc-clsFYl dVMAoD"
    >
      <li
        className="sc-fbkiRW iEQkJs"
      >
        <p
          className="sc-GqePz cjnXfr"
        >
          КУРС | ОЦЕНКА
        </p>
        <div
          className="sc-fWSDcn bfIflS"
        >
          <div
            className="sc-dlfnuX jEwccD"
          >
            <div
              className="sc-hKgJUU exSYKH"
            >
              Back End
            </div>
            <div
              className="sc-eCstlR jmBBBx"
            >
              8
            </div>
          </div>
        </div>
      </li>
      <li
        className="sc-fbkiRW iEQkJs"
      >
        <p
          className="sc-GqePz cjnXfr"
        >
          ДИПЛОМ
        </p>
        <div
          className="sc-fWSDcn bfIflS"
        >
          <a
            className="sc-dwfUuu knIdpG"
            href="https://Lorem ipsum dolor sit amet-consectetuer adipiscing elit/Aenean commodo ligula eget dolor0Aenean massa-Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus /"
          >
            https://Lorem ipsum dolor sit amet-consectetuer adipiscing elit/Aenean commodo ligula eget dolor0Aenean massa-Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus /
          </a>
        </div>
      </li>
      <li
        className="sc-fbkiRW iEQkJs"
      >
        <p
          className="sc-GqePz cjnXfr"
        >
          ОТ ШКОЛЫ
        </p>
        <div
          className="sc-fWSDcn bfIflS"
        >
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
        </div>
      </li>
      <li
        className="sc-fbkiRW iEQkJs"
      >
        <p
          className="sc-GqePz cjnXfr"
        >
          НАВЫКИ
        </p>
        <div
          className="sc-fWSDcn bfIflS"
        />
      </li>
      <li
        className="sc-fbkiRW iEQkJs"
      >
        <p
          className="sc-GqePz cjnXfr"
        >
          ОБРАЗОВАНИЕ
        </p>
        <div
          className="sc-fWSDcn bfIflS"
        />
      </li>
      <li
        className="sc-fbkiRW iEQkJs"
      >
        <p
          className="sc-GqePz cjnXfr"
        >
          О СТУДЕНТЕ
        </p>
        <div
          className="sc-fWSDcn bfIflS"
        >
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
        </div>
      </li>
      <li
        className="sc-fbkiRW iEQkJs"
      >
        <p
          className="sc-GqePz cjnXfr"
        >
          КОНТАКТЫ
        </p>
        <div
          className="sc-fWSDcn bfIflS"
        >
          ivan@teachmeskills@com
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots TMS/StudentCV Student CV Not Marked 1`] = `
<div
  className="sc-gTgzoy csHUE"
>
  <div
    className="sc-laRQdt iMZtCc"
  >
    <div
      className="sc-jeGTLq hHWhMN"
    />
    <div
      className="sc-iNqMzA kvwMvg"
    >
      <div
        className="sc-eJMPIT gNNHj"
      >
        <h2
          className="sc-nFqVA tFExb"
        >
          Иван
           
          Иванов
        </h2>
        <p
          className="sc-higWrZ ePyTma"
        >
          Java Developer
        </p>
      </div>
      <div
        className="sc-ehSDrC ffDiTh"
      >
        <button
          className="sc-gsTEea cOhArm sc-lcuiOb kNxNDL"
          type="button"
        >
          Пригласить
        </button>
        <button
          className="sc-bdfBQB jwyqxD"
          type="button"
        />
      </div>
    </div>
  </div>
  <div
    className="sc-gGmKaI fYeUkj"
  >
    <ul
      className="sc-clsFYl dVMAoD"
    >
      <li
        className="sc-fbkiRW iEQkJs"
      >
        <p
          className="sc-GqePz cjnXfr"
        >
          КУРС | ОЦЕНКА
        </p>
        <div
          className="sc-fWSDcn bfIflS"
        >
          <div
            className="sc-dlfnuX jEwccD"
          >
            <div
              className="sc-hKgJUU exSYKH"
            >
              Front End
            </div>
            <div
              className="sc-eCstlR jmBBBx"
            >
              10
            </div>
          </div>
        </div>
      </li>
      <li
        className="sc-fbkiRW iEQkJs"
      >
        <p
          className="sc-GqePz cjnXfr"
        >
          ДИПЛОМ
        </p>
        <div
          className="sc-fWSDcn bfIflS"
        >
          <a
            className="sc-dwfUuu knIdpG"
            href="https://Lorem ipsum dolor sit amet-consectetuer adipiscing elit/Aenean commodo ligula eget dolor0Aenean massa-Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus /"
          >
            https://Lorem ipsum dolor sit amet-consectetuer adipiscing elit/Aenean commodo ligula eget dolor0Aenean massa-Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus /
          </a>
        </div>
      </li>
      <li
        className="sc-fbkiRW iEQkJs"
      >
        <p
          className="sc-GqePz cjnXfr"
        >
          ОТ ШКОЛЫ
        </p>
        <div
          className="sc-fWSDcn bfIflS"
        >
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
        </div>
      </li>
      <li
        className="sc-fbkiRW iEQkJs"
      >
        <p
          className="sc-GqePz cjnXfr"
        >
          НАВЫКИ
        </p>
        <div
          className="sc-fWSDcn bfIflS"
        />
      </li>
      <li
        className="sc-fbkiRW iEQkJs"
      >
        <p
          className="sc-GqePz cjnXfr"
        >
          ОБРАЗОВАНИЕ
        </p>
        <div
          className="sc-fWSDcn bfIflS"
        />
      </li>
      <li
        className="sc-fbkiRW iEQkJs"
      >
        <p
          className="sc-GqePz cjnXfr"
        >
          О СТУДЕНТЕ
        </p>
        <div
          className="sc-fWSDcn bfIflS"
        >
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
        </div>
      </li>
      <li
        className="sc-fbkiRW iEQkJs"
      >
        <p
          className="sc-GqePz cjnXfr"
        >
          КОНТАКТЫ
        </p>
        <div
          className="sc-fWSDcn bfIflS"
        >
          Контакты студента станут вам доступны после принятия вашего приглашения.
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots TMS/StudentImages Image In Circle 1`] = `
<div
  className="sc-idOiZg cNFClk sc-hHfuMS fMtLhN"
/>
`;

exports[`Storyshots TMS/StudentImages Image On Card 1`] = `
<div
  className="sc-idOiZg cNFClk"
/>
`;

exports[`Storyshots TMS/StudentImages No Image In Circle 1`] = `
<div
  className="sc-idOiZg kzLKMn sc-hHfuMS egjNXE"
>
  <p
    className="sc-dIUeWJ iwCEKU"
  >
    ЗФ
  </p>
</div>
`;

exports[`Storyshots TMS/StudentImages No Image On Card 1`] = `
<div
  className="sc-idOiZg kzLKMn"
>
  <p
    className="sc-dIUeWJ iwCEKU"
  >
    ИИ
  </p>
</div>
`;

exports[`Storyshots TMS/StudentPreviewCard Student Card 1`] = `
<div
  className="sc-TmdmN iLvWyQ"
>
  <div
    className="sc-idOiZg kzLKMn"
  >
    <p
      className="sc-dIUeWJ iwCEKU"
    >
      ИИ
    </p>
  </div>
  <div
    className="sc-aemIz dJrRsD"
  >
    <h3
      className="sc-hlTwrV bOmiPb"
    >
      Иван
       
      Иванов
    </h3>
    <p
      className="sc-eLgNKc eASmqA"
    >
      Java Developer
    </p>
    <div
      className="sc-bTvSiT ggaNTg"
    >
      <div
        className="sc-dmlqKv jBjACC"
      >
        Front End
      </div>
      <div
        className="sc-dmlqKv GFsbe"
      >
        Лучший ученик
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/StudentPreviewCard Student Card Active 1`] = `
<div
  className="sc-TmdmN cEJBeP"
>
  <div
    className="sc-idOiZg cNFClk"
  />
  <div
    className="sc-aemIz dJrRsD"
  >
    <h3
      className="sc-hlTwrV bOmiPb"
    >
      Роман
       
      Шашков
    </h3>
    <p
      className="sc-eLgNKc eASmqA"
    >
      Python Developer
      , 25 лет
    </p>
    <div
      className="sc-bTvSiT ggaNTg"
    >
      <div
        className="sc-dmlqKv jBjACC"
      >
        Back End
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Tags Course And Score Tag 1`] = `
<div
  className="sc-dlfnuX jEwccD"
>
  <div
    className="sc-hKgJUU exSYKH"
  >
    Front End
  </div>
  <div
    className="sc-eCstlR jmBBBx"
  >
    10
  </div>
</div>
`;

exports[`Storyshots TMS/Tags Course Tag 1`] = `
<div
  className="sc-kfzBvY gmSvLa"
>
  Front End
</div>
`;

exports[`Storyshots TMS/Tags Small Best Student Tag 1`] = `
<div
  className="sc-dmlqKv GFsbe"
>
  Лучший ученик
</div>
`;

exports[`Storyshots TMS/Tags Small Course Tag 1`] = `
<div
  className="sc-dmlqKv jBjACC"
>
  Front End
</div>
`;

exports[`Storyshots TMS/UserMenu Drop Down Menu 1`] = `
<div
  className="sc-jJEKmz kfFjCj"
>
  <div
    className="sc-idOiZg kzLKMn sc-hHfuMS sc-iktFfs egjNXE gOnyxR"
  >
    <p
      className="sc-dIUeWJ iwCEKU"
    >
      ИИ
    </p>
  </div>
  <div
    className="sc-lmoMya ekuvtZ sc-giImIA hWmYcj"
  >
    <div
      className="sc-ezredP jCVlAl"
    >
      Иван
       
      Иванов
    </div>
    <ul
      className="sc-bYEvvW kkQYos"
    >
      <li
        className="sc-kLgnNl hUoQzP"
      >
        <a
          className="sc-iwyWTf cPNnGr"
          href="/user"
        >
          <div
            className="sc-bBXrwG ljHKcg"
          >
            <img
              className="sc-fKFxtB kifndG"
              src="profile-icon.svg"
            />
          </div>
          <div
            className="sc-cxFLGX hYdkGv"
          >
            ПРОФИЛЬ
          </div>
        </a>
      </li>
      <li
        className="sc-kLgnNl hUoQzP"
      >
        <a
          className="sc-iwyWTf cPNnGr"
          href="/setting"
        >
          <div
            className="sc-bBXrwG ljHKcg"
          >
            <img
              className="sc-fKFxtB kifndG"
              src="setting-icon.svg"
            />
          </div>
          <div
            className="sc-cxFLGX hYdkGv"
          >
            НАСТРОЙКИ
          </div>
        </a>
      </li>
      <li
        className="sc-kLgnNl hUoQzP"
      >
        <a
          className="sc-iwyWTf cPNnGr"
          href="/"
        >
          <div
            className="sc-bBXrwG ljHKcg"
          >
            <img
              className="sc-fKFxtB kifndG"
              src="sign-out-icon.svg"
            />
          </div>
          <div
            className="sc-cxFLGX hYdkGv"
          >
            ВЫХОД
          </div>
        </a>
      </li>
    </ul>
    <div
      className="sc-iJuVqt sjgnd"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/UserMenu Menu Item 1`] = `
<a
  className="sc-iwyWTf cPNnGr"
  href="/user"
>
  <div
    className="sc-bBXrwG ljHKcg"
  >
    <img
      className="sc-fKFxtB kifndG"
      src="profile-icon.svg"
    />
  </div>
  <div
    className="sc-cxFLGX hYdkGv"
  >
    ПРОФИЛЬ
  </div>
</a>
`;

exports[`Storyshots Welcome Test Component Example 1`] = `
Array [
  <div>
    helloworld from storybook
  </div>,
  <button
    className="sc-kIeSZW fDhROU"
  >
    Styled Button
  </button>,
]
`;

exports[`Storyshots Welcome Test Component Example Default 1`] = `
Array [
  <div>
    helloworld
  </div>,
  <button
    className="sc-kIeSZW fDhROU"
  >
    Styled Button
  </button>,
]
`;
